--- a/index.html
+++ b/index.html
@@ -45,17 +45,30 @@
                         <form class="bg-dark">
                             <p>Filter Search</p>
                             <ul class="list-group bg-dark">
-                                <li class="list-group-item bg-dark">
-                                <label for="date">Enter Date</label>
-                                <input type="text" placeholder="1/10/2010" id="datetime" />
-                                </li>
-                                <li class="list-group-item bg-dark ">
-                                   <button id="filter-btn" type="button" class="btn btn-dark">
-                                        Filter Table
-                                    </button>
                             </ul>
-                          </form class="bg-dark" >
-                    </div>
+                        </form>
+                        <li class="list-group-item bg-dark">
+                            <label for="date">Enter Date</label>
+                            <input type="text" placeholder="1/10/2010" id="datetime" />
+                        </li>
+                        <li class="list-group-item bg-dark">
+                            <label for="date">Enter a City</label>
+                            <input type="text" placeholder="bonita" id="city" />
+                        </li>
+                        <li class="list-group-item bg-dark">
+                            <label for="date">Enter a State</label>
+                            <input type="text" placeholder="ca" id="state" />
+                        </li>
+                        <li class="list-group-item bg-dark">
+                            <label for="date">Enter a Country</label>
+                            <input type="text" placeholder="us" id="country" />
+                        </li>
+                        <li class="list-group-item bg-dark">
+                            <label for="date">Enter a Shape</label>
+                            <input type="text" placeholder="light" id="shape" />
+                        </li>
+                               
+                        </div>
                     <div class="col-md-9">
                         <table class="table table-striped">
                             <thead>
